Update author in package.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/mehmetgspace/kepler-22b.git"
   },
-  "author": "",
+  "author": "Mehmet Guler",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mehmetgspace/kepler-22b/issues"
